--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
 	"description": "SpotBot - приложение для поиска свободного места.",
 	"icons": [
 		{
-			"src": "src/assets/images/logo128.png",
+			"src": "%PUBLIC_URL%/logo128.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "src/assets/images/logo512.png",
+			"src": "%PUBLIC_URL%/logo512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
